# tour-agents

./: .env_copy  .env_example  .flake8  .gitignore  Dockerfile  Makefile  Readme.md  TODO  alembic.ini  const.py  country_script.py  docker-compose.yml  main.py  pyproject.toml  s.html  test.py
admin/: __init__.py  auth.py  trips.py  user.py
bot/: main.py  reply_markup.py
core/: config.py
database/: __init__.py  base_model.py  categories.py  countries.py  order.py  session.py  support.py  trips.py  users.py
locales/en/LC_MESSAGES/: messages.po
locales/uz/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: 3ff0137cdb9d_initial_commit.py  73c2cee89a88_add_password_column.py  90794ccaefc0_initial_commit.py  a255e671fe39_initial_commit.py  d04326331f63_initial_commit.py  d7f985763379_initial_commit.py  e7dfc73c5d65_make_telegram_id_unique.py  fd65020a2a59_initial_commit.py
routers/: __init__.py  ai.py  auth.py  support.py  tour.py  trip.py  user.py  users.py
schemas/: ai_schema.py  auth.py  base_schema.py  tour.py
services/: ai_servise.py  otp_services.py  support_service.py  trip_service.py
templates/: login.html
templates/apps/: about.tsx  contact.tsx  destinations.tsx  global.css  login.tsx  page.tsx  tours.tsx
templates/components/: featured-destinations.tsx  footer.tsx  hero-section.tsx  navigation.tsx  testimonials.tsx
templates/custom/: admin_edit.html
templates/scarlet_admin/: base.html
utils/: country_script.py  fake_data.py  security.py  superuser.py  utils.py
utils/fixtures/: countries.json
